--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
   <title>Generate Certificate</title>
-  <script src="pdf-lib.min.js"></script>
-  <!-- <script src="https://cdn.jsdelivr.net/npm/pdf-lib/dist/pdf-lib.min.js"></script> -->
+  <!-- <script src="pdf-lib.min.js"></script> -->
+  <script src="https://cdn.jsdelivr.net/npm/pdf-lib/dist/pdf-lib.min.js"></script>
   <script>
     const textboxWidth = 340;
     const textboxHeight = 100;
