--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
   <title>Generate Certificate</title>
-  <!-- <script src="pdf-lib.min.js"></script> -->
-  <script src="https://cdn.jsdelivr.net/npm/pdf-lib/dist/pdf-lib.min.js"></script>
+  <script src="pdf-lib.min.js"></script>
+  <!-- <script src="https://cdn.jsdelivr.net/npm/pdf-lib/dist/pdf-lib.min.js"></script> -->
   <script>
     const textboxWidth = 340;
     const textboxHeight = 100;
@@ -60,7 +60,7 @@
 
     var url = new URL(window.location.href);
     var params = new URLSearchParams(url.search);
-    var name = params.get('name');
+    var name = params.get('n');
     if (name) {
       generateCertificate(name);
     }
