--- a/index.html
+++ b/index.html
@@ -15,6 +15,16 @@
         justify-content: center;
         height: 100%;
       }
+      /* Responsive Styles for Mobile */
+      @media (max-width: 767px) {
+        .container {
+          flex-direction: column;
+        }
+
+        button {
+          margin-top: 20px;
+        }
+      }
     </style>
   </head>
   <body>
