--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       a.click();
       document.body.removeChild(a);
       // if(!params.get('nn')){
-        window.location.href = "https://pogs2023midyear.com/thank-you/?n="+name;
+        // window.location.href = "https://pogs2023midyear.com/thank-you/?n="+name;
       // }
     }
     // if (name) {
