--- a/index.html
+++ b/index.html
@@ -95,6 +95,8 @@
         // window.location.href = "https://pogs2023midyear.com/thank-you/?n="+name;
       // }
     }
+    const button = document.querySelector('.btn');
+    button.addEventListener('click', generateCertificate);
     // if (name) {
     //   // generateCertificate(name);
     // }
