--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="container text-center">
       <button class="btn btn-success" id="generateBtn" onclick="generateCertificate()">Download Certificate</button>
       <div class="spinner-border text-success d-none" id="loadingSpinner" role="status">
-        <span class="visually-hidden">Loading...</span>
+        <span class="visually-hidden"></span>
       </div>
     </div>
     <!-- <script src="https://cdn.jsdelivr.net/npm/pdf-lib/dist/pdf-lib.min.js"></script> -->
